# launch-bar

./: .gitignore  Cargo.toml  README.md
crates/launch-bar/: Cargo.toml
crates/launch-bar/src/: app.rs  main.rs  platform.rs
crates/launch-bar/src/config/: detect.rs  mod.rs  resolver.rs  state.rs  types.rs
crates/launch-bar/src/script/: lua_engine.rs  mod.rs  rhai_engine.rs
crates/launch-bar/src/ui/: colors.rs  icons.rs  mod.rs  widgets.rs
